# webspace_app

./: .cursorignore  .gitignore  .gptignore  CLAUDE.md  CONTRIBUTING.md  FLUTTER_SCREENSHOTS_QUICKSTART.md  Gemfile  LICENSE  PRIVACY.md  PROXY_USAGE.md  README.md  SCREENSHOTS.md  SCREENSHOT_TEST_SETUP.md  audit_notes.md  l10n.yaml  package-lock.json  package.json  pubspec.yaml  rust-toolchain.toml
.autopr/: triggers.yaml
.github/: FUNDING.yml
.github/workflows/: autopr.yaml  autopr.yml  build-and-test.yml  openspec-validate.yml  screenshots.yml  update-lockfile.yml
android/: .gitignore  build.gradle  debug_screenshots.sh  gradle.properties  test_demo_mode.sh
android/app/: build.gradle  proguard-rules.pro
android/fastlane/: .gitignore  Appfile  Fastfile  Screengrabfile  extract_screenshots.sh  test_data_seeder.dart
assets/licenses/: adblock_rust.txt  cdnjs.txt  clearurls.txt  easylist.txt  favicon.txt  hagezi.txt  openstreetmap.txt  ubo_resources.txt
docs/: demo_mode_fix.md
docs/bugs/: 001-white-screen.md  002-black-screen.md  003-cold-start-history-loss.md  003-user-script-library-referenceerror.md  004-abp-devtools-undercount.md  004-cookieless-bridge-session-drop.md  005-frozen-user-agent.md  006-settings-silent-discard.md  007-native-shared-state-races.md
docs/diagnostics/: ios_viewport_probe.html
fastlane/: .gitignore  Appfile  Fastfile  README.md
formal/: .gitignore  README.md  archive.cfg  archive.tla  archive_leak.cfg  archive_reach.cfg  check.sh  containers.cfg  containers.tla  containers_alias.cfg  containers_reach.cfg  jar_nonempty.cfg  jar_nonempty.tla  jar_nonempty_bail.cfg  jar_nonempty_reach.cfg  kernel.cfg  kernel.tla  kernel_conflict.cfg  kernel_conflict_contaminate.cfg  kernel_conflict_evict.cfg  kernel_conflict_repaint.cfg  kernel_reach_evict_bg.cfg  kernel_reach_site_switch.cfg  kernel_reach_surface_attach.cfg  kiosk.cfg  kiosk.tla  kiosk_leak_chrome.cfg  kiosk_leak_fs.cfg  kiosk_reach.cfg  proxy.cfg  proxy.tla  proxy_failclosed.cfg  proxy_failclosed.tla  proxy_failclosed_leak.cfg  proxy_failclosed_reach.cfg  proxy_mismatch.cfg  proxy_reach.cfg  renderer.cfg  renderer.tla  renderer_noprobe.cfg  (+17 more)
formal/proofs/: README.md  archive_identity.tla  check_proofs.sh  containers_disjoint.tla  current_loaded.tla  jar_matches.tla  jar_repopulated.tla  no_lost_update.tla  proxy_coherent.tla  proxy_failclosed_safe.tla  repaint_liveness.tla  retention_safety.tla  switch_guarded.tla
formal/trace/: check_trace.sh  conformance.tla  parse_log.py  sample_bad.tracelog  sample_good.tracelog
integration_test/: README.md  background_audio_lifecycle_test.dart  blocker_warning_test.dart  fullscreen_auto_test.dart  js_bridge_benchmark_test.dart  lazy_webview_loading_test.dart  notification_autoload_test.dart  privacy_settings_test.dart  proxy_auth_test.dart  safari_navigation_test.dart  screenshot_test.dart  secure_storage_fake.dart  settings_backup_roundtrip_test.dart  settings_smoke_test.dart  site_editing_test.dart  spa_cross_domain_navigation_test.dart  webspace_crud_test.dart  webspace_site_membership_test.dart
integration_test/fixtures/: background_audio.html  background_audio_fixture.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  BackgroundTaskPlugin.swift  Info.plist  LocationPlugin.swift  Runner.entitlements  ShortcutsPlugin.swift  (+3 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: add_site.dart  demo_data.dart  find_toolbar.dart  inapp_webview.dart  main.dart  settings_page.dart  web_view_model.dart  webspace_model.dart
linux/: CMakeLists.txt  my_application.cc  web_space_profile_plugin.cc  web_space_profile_plugin.h  webspace.desktop
macos/: Podfile
openspec/: README.md  config.yaml
rust/webspace_adblock/: Cargo.toml  build.rs  cbindgen.toml
rust/webspace_adblock/cocoapods/: webspace_adblock.podspec
rust/webspace_adblock/src/: jni.rs  lib.rs  ubo_resources.json
rust/webspace_adblock/tests/: procedural_backfill.rs
scripts/: apply_plugin_patches.dart  build_all.sh  build_rust.sh  check_jni_intact.sh  check_no_gms.sh  make_screenshots.sh  regen_suggested_icons.sh  test_all.sh  validate_fastlane_metadata.sh  verify_adblock_shipped.sh
shared/: WebSpaceProfilePlugin.swift
test/: EDGE_CASES_TESTED.md  abp_filter_parser_test.dart  abp_network_hosts_test.dart  accent_logo_recolor_test.dart  adblock_engine_test.dart  anti_fingerprinting_shim_test.dart  app_lifecycle_engine_test.dart  app_locale_test.dart  archive_crypto_test.dart  archive_neutrality_test.dart  archive_storage_test.dart  archive_test.dart  background_audio_fixture_drift_test.dart  background_notification_info_dialog_test.dart  background_task_service_test.dart  blob_url_capture_test.dart  bloom_filter_test.dart  captcha_detection_test.dart  captcha_support_test.dart  check_jni_intact_parsing_test.dart  check_no_gms_parsing_test.dart  clearurl_service_test.dart  connectivity_service_test.dart  container_isolation_engine_test.dart  container_isolation_integration_test.dart  content_blocker_service_isblocked_test.dart  content_blocker_service_test.dart  content_blocker_shim_test.dart  cookie_blocking_test.dart  cookie_isolation_integration_test.dart  cookie_isolation_test.dart  cookie_secure_storage_test.dart  current_location_service_test.dart  custom_icon_test.dart  deferred_startup_engine_test.dart  demo_mode_test.dart  desktop_mode_migration_test.dart  desktop_mode_shim_test.dart  dns_block_alternatives_benchmark_test.dart  dns_block_benchmark_test.dart  (+100 more)
test_driver/: integration_test.dart
tool/: check_l10n_language.js  dump_shim_js.dart  translate_arb.dart
transcript/: 0-gpt4-coding.md  CLEANUP_SUMMARY.md  COOKIE_SECURE_STORAGE.md  EDIT_FEATURE.md  FASTLANE_SETUP.md  FLUTTER_SCREENSHOT_IMPLEMENTATION.md  FLUTTER_VS_JAVA_SCREENSHOTS.md  IMPLEMENTATION_NOTES.md  KNOWN_ISSUES.md  LINUX_STATUS.md  PROXY_FEATURE.md  PROXY_USAGE.md  README.md  README_IMPLEMENTATION.md  RESIZE_FIX.md  SCREENGRAB_ANDROID13_RESEARCH.md  SCREENSHOTS.md  SETTINGS_BACKUP.md  THEME_FEATURE.md  icon_improvements.md  summary.md  webspaces-feature.md
transcripts/: fix-nested-webview-urls.md
(+518 files in other folders)
